--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,8 @@
 
 body {
   min-inline-size: 375px;
-  max-inline-size: 1440px;
+  /* max-inline-size: 1440px; */
+  max-inline-size: 1920px;
   margin: 0 auto;
 }
 
