--- a/styles/light.css
+++ b/styles/light.css
@@ -5,6 +5,16 @@
 */
 
 :root.theme-light {
+  --accent-title-color: #FFC2E6;
+  --accent-color: #FF8DCB;
+  --accent-description-color: #353430;
+  --section-description-color: #353430;
+  --border-color: #353430;
+  --main-font: 'IBM Plex mono';
+  --background-image: url("../images/cover-image-light.png");
+  --display-content: none;
+  --underline-color: #353430;
+  --hover-border-color: rgba(50, 49, 45, 0.4);
   /* сохраните этот селектор в приведённом виде.
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
