--- a/styles/style.css
+++ b/styles/style.css
@@ -2,4 +2,551 @@
 
 .page {
   /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
+  /* display: grid; */
+  width: 100%;
+  /* grid-template-columns: 1fr; */
+  background-image: var(--background-image);
+  background-position: center;
+  background-attachment: fixed;
+  background-size: cover;
+  background-repeat: no-repeat;
+  padding-inline-start: 10px;
+  padding-inline-end: 10px;
 }
+
+.rec__element {
+  color: var(--accent-color);
+  font-family: 'IBM Plex mono';
+  font-size: 18px;
+  position: absolute;
+  top: 12px;
+  right: 20px;
+  display: var(--display-content);
+  align-items: center;
+}
+
+.rec__element::after {
+  content: '';
+  width: 12px;
+  height: 12px;
+  background-color: var(--accent-color);
+  border-radius: 50%;
+  margin-left: 10px;
+  box-shadow: 0 0 8px var(--accent-color);
+  border-top: 1px solid #ff007f;
+  border-right: 1px solid #ff007f;
+}
+
+/* .rec__element::before {
+  content: '';
+  position: absolute;
+  right: -7px;
+  width: 25px;
+  height: 25px;
+  border-top: 1px solid #ff007f;
+  border-right: 1px solid #ff007f;
+} */
+
+.header::before {
+  content: '';
+  position: absolute;
+  right: 12px;
+  top: 10px;
+  width: 25px;
+  height: 25px;
+  border-top: 1px solid var(--border-color);
+  border-right: 1px solid var(--border-color);
+}
+
+.header::after {
+  content: '';
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  width: 25px;
+  height: 25px;
+  border-left: 1px solid var(--border-color);
+  border-bottom: 1px solid var(--border-color);
+}
+
+.accent__word {
+  text-shadow: 2px 2px 0 var(--accent-color);
+}
+
+.header__theme-menu-button:focus {
+  outline: none;
+  border-bottom: 1px solid var(--border-color);
+}
+
+.header__theme-menu-button {
+  cursor: pointer;
+}
+
+.theme-input {
+  display: none;
+}
+
+.theme-input:checked + .header__theme-menu-button {
+  outline: 1px solid var(--border-color);
+  padding: 0 15px 4px;
+}
+
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+a:focus {
+  outline: none;
+  outline: 1px solid var(--links-border-color);
+}
+
+.title-decor {
+  font-family: var(--main-font), sans-serif;
+  color: var(--accent-description-color);
+  background-color: var(--accent-color);
+  font-size: var(--font-description-size);
+}
+
+.header {
+  display: grid;
+  min-block-size: 668px;
+}
+
+.header__theme-menu {
+  display: flex;
+  justify-content: end;
+  margin-block-start: 70px;
+  margin-inline-end: 10px;
+  line-height: 33px;
+}
+
+.header__theme-menu-button {
+  background-color: inherit;
+  border: none;
+  font-family: var(--main-font), sans-serif;
+  font-size: 18px;
+  color: var(--accent-color);
+  text-transform: lowercase;
+}
+
+.main__article__card:not(:first-child) {
+  margin-block-start: 50px;
+}
+
+.main__article__card:first-child {
+  margin-block-start: 40px;
+}
+
+.main__title {
+  color: var(--accent-title-color);
+  font-family: var(--main-font), sans-serif;
+  font-weight: bold;
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  text-shadow: 4px 4px 0 var(--accent-color);
+  line-height: 83%;
+}
+
+.main__description {
+  font-weight: bold;
+  line-height: 23.4px;
+  letter-spacing: 0%;
+  margin-block-start: 55px;
+}
+
+.title-decor {
+  background-color: var(--accent-color);
+}
+
+.article__title {
+  font-weight: bold;
+}
+
+.article__pre-title {
+  margin-block-end: 20px;
+}
+
+.article__title:not(:last-child) {
+  margin-block-end: 10px;
+}
+
+.article__description {
+  color: var(--section-description-color);
+  font-family: var(--main-font);
+  line-height: 23.4px;
+  font-size: 18px;
+}
+
+.article__description {
+  margin-block-end: 20px;
+}
+
+.article__question__title {
+  color: var(--accent-color);
+  font-family: var(--main-font);
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.article__advise__title {
+  font-weight: normal;
+  margin-block-end: 10px;
+}
+
+.main__card__title {
+  margin-block-start: 50px;
+  margin-block-end: 10px;
+}
+
+.main__pictures {
+  display: grid;
+  justify-content: center;
+  gap: 10px;
+}
+
+.main__picture {
+  inline-size: 355px;
+  grid-column: 1;
+}
+
+.footer {
+  position: relative;
+  display: grid;
+  margin-block-start: 40px;
+  min-block-size: 668px;
+  justify-content: center;
+  align-content: center;
+}
+
+.footer::before {
+  content: '';
+  position: absolute;
+  right: 5px;
+  top: 10px;
+  width: 25px;
+  height: 25px;
+  border-top: 1px solid var(--border-color);
+  border-right: 1px solid var(--border-color);
+}
+
+.footer::after {
+  content: '';
+  position: absolute;
+  bottom: 10px;
+  left: 5px;
+  width: 25px;
+  height: 25px;
+  border-left: 1px solid var(--border-color);
+  border-bottom: 1px solid var(--border-color);
+}
+
+@media (width >= 768px) {
+  .page {
+    padding-inline-start: 20px;
+    padding-inline-end: 20px;
+  }
+
+  .header {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    grid-template-rows: 1fr 2fr;
+    min-block-size: 1024px;
+  }
+
+  .rec__element {
+    padding-block-start: 10px;
+    padding-inline-end: 10px;
+  }
+
+  .rec__element::after {
+  }
+
+  .header::before {
+    right: 20px;
+    top: 20px;
+  }
+  
+  .header::after {
+    bottom: 10px;
+    left: 10px;
+  }
+
+  .main__title__section {
+    grid-column: 1 / 3;
+    grid-row: 2 / 3;
+    display: grid;
+  }
+
+  .main__title {
+    grid-column: 1 / 3;
+    align-self: center;
+    margin-inline-start: -20px;
+    margin-block-end: 160px;
+    margin-block-start: 125px;
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
+
+  .main__description {
+    grid-column: 2 / 3;
+    margin-top: 50px;
+    justify-self: flex-end;
+    width: 50%;
+  }
+
+  .header__theme-menu {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+    align-self: flex-end;
+    margin-block-end: 50px;
+    margin-inline-end: 10px;
+  }
+
+  .main__article__card {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    grid-template-rows: auto;
+    margin-top: 20px;
+  }
+
+  .article__content {
+    grid-column: 2 / 3;
+    margin-block-start: 20px;
+    margin-inline-start: 10px;
+  }
+
+  .main__section > .main__article__card:nth-of-type(1)> .article__question__title {
+    max-width: 475px;
+  }
+
+  .article__medium__card {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .article__medium__card .article__content {
+    grid-column: 1 / 3;
+  }
+
+  .article__medium__card .article__question__title {
+    max-width: 236px;
+    margin-block-start: 0;
+    padding-block-start: 30px;
+  }
+
+  .article__medium__card .article__content {
+    margin-block-start: 0;
+    margin-inline-start: 0;
+    
+  }
+
+  .article__medium__card .article__description {
+    margin-block-end: 20px;
+  }
+
+  .article__question__title {
+    grid-column: 1 / 2;
+    margin-block-start: 20px;
+  }
+
+  .article__description {
+    margin: 0;
+  }
+
+  .main__section > .main__article__card:nth-of-type(3) > .article__question__title {
+    margin-block-start: 10px;
+    min-width: 236px;
+  }
+
+  .main__section > .main__article__card:nth-of-type(3) > .article__content {
+    /* margin-inline-start: 20px; */
+    margin-block-start: 10px;
+    margin-block-end: 10px;
+    max-width: 475px;
+  }
+
+  .main__card__title {
+    margin-block-start: 70px;
+    margin-block-end: 20px;
+    /* margin-inline-start: 10px; */
+  }
+
+  /* .main__picture__section {
+    margin-inline-start: 10px;
+    margin-inline-end: 10px;
+  } */
+
+  .main__pictures {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    gap: 20px;
+    grid-auto-flow: dense;
+    max-height: 825px;
+  }
+
+  .main__picture {
+    inline-size: inherit;
+    display: flex;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+  }
+
+  .main__picture:nth-child(1) {
+    grid-column: 1 / 3;
+    grid-row: 1;
+  }
+
+  .main__picture:nth-child(2) {
+    grid-column: 3 / 4;
+    grid-row: 1 / 3;
+    overflow: hidden;
+  }
+
+  .main__picture:nth-child(3) {
+    grid-column: 1 / 2;
+    grid-row: 2 / 4;
+  }
+
+  .main__picture:nth-child(4) {
+    grid-column: 2;
+    grid-row: 2 / 3;
+  }
+
+  .main__picture:nth-child(5) {
+    grid-column: 2 / 4;
+    grid-row: 3 / 4;
+  }
+
+  .footer {
+    min-block-size: 1000px;
+    margin-block-start: 45px;
+  }
+
+  .footer::before {
+    right: 0px;
+    top: -10px;
+  }
+  
+  .footer::after {
+    bottom: 25px;
+    left: 0;
+  }
+}
+
+@media (width >= 1024px) {
+  .page {
+    padding-inline-start: 20px;
+    padding-inline-end: 20px;
+  }
+
+  .header {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 3fr;
+    min-block-size: 768px;
+  }
+
+  .header::after {
+    content: '';
+    position: absolute;
+    bottom: 130px;
+    left: 20px;
+  }
+
+  .main__title {
+    grid-column: 1 / 3;
+    margin-block-start: 125px;
+    margin-block-end: 115px;
+    font-size: clamp(9.8125rem, 11.8125rem + -3.125vw, 10.3125rem);
+  }
+
+  .main__description {
+    max-inline-size: 490px;
+  }
+
+  .header__theme-menu {
+    grid-column: 1 / 3;
+    justify-content: center;
+    align-self: flex-start;
+    margin: 0;
+  }
+
+  .header__theme-menu-list {
+    display: flex;
+    gap: 25px;
+    margin-block-start: 15px;
+  }
+
+  .article__title {
+
+  }
+
+  .article__medium__card .article__question__title {
+    max-width: 315px;
+  }
+
+  .article__medium__card {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .article__medium__card .article__title {
+    grid-row: 1 / 2;
+    grid-column: 1 / 2;
+  }
+
+  .article__medium__card .article__content {
+    max-width: 315px;
+    justify-self: center;
+    align-self: flex-start;
+  }
+
+  .article__medium__card .article__content:nth-child(2) {
+    grid-row: 2 / 3;
+    grid-column: 1 / 2;
+    /* margin-inline-end: 40px; */
+  }
+
+  .article__medium__card .article__content:nth-child(3) {
+    grid-row: 2 / 3;
+    grid-column: 2 / 3;
+  }
+
+  .article__medium__card .article__content:last-child {
+    grid-row: 2 / 3;
+    grid-column: 3 / 4;
+  }
+
+  .main__section > .main__article__card:nth-of-type(3) > .article__content {
+    max-width: 650px;
+  }
+
+  .main__pictures {
+    max-width: 985px;
+    justify-self: center;
+  }
+
+  .footer {
+    display: grid;
+    justify-self: center;
+    align-self: flex-end;
+    margin-block-start: 275px;
+    margin-inline-start: 10px;
+    min-height: 768px;
+  }
+
+  .footer::before {
+    right: -260px;
+    top: 25px;
+  }
+  
+  .footer::after {
+    bottom: 15px;
+    left: -270px;
+  }
+}
+
