--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,3 +2,17 @@
   Переменные для вашего проекта
   и их переопределение под различные устройства
 */
+:root {
+  --accent-title-color: #DB00FF;
+  --accent-color: #FF0070;
+  --accent-description-color: #000028;
+  --section-description-color: #F1B2CE;
+  --border-color: #FF0070;
+  --main-font: 'IBM Plex mono';
+  --background-image: url("../images/cover-image-dark.png");
+  --display-content: flex;
+  --underline-color: #F1B2CE;
+  --font-description-size: 18px;
+  --hover-border-color: rgba(255, 0, 112, 0.4);
+  --links-border-color: #F1B2CE;
+}
