--- a/styles/light.css
+++ b/styles/light.css
@@ -15,6 +15,7 @@
   --display-content: none;
   --underline-color: #353430;
   --hover-border-color: rgba(50, 49, 45, 0.4);
+  --background-color: white;
   /* сохраните этот селектор в приведённом виде.
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
