--- a/styles/variables.css
+++ b/styles/variables.css
@@ -15,4 +15,5 @@
   --font-description-size: 18px;
   --hover-border-color: rgba(255, 0, 112, 0.4);
   --links-border-color: #F1B2CE;
+  --background-color: #000028;
 }
