--- a/styles/variables.css
+++ b/styles/variables.css
@@ -12,7 +12,7 @@
   --background-image: url("../images/cover-image-dark.png");
   --display-content: flex;
   --underline-color: #F1B2CE;
-  --font-description-size: 18px;
+  --main-font-size: 18px;
   --hover-border-color: rgba(255, 0, 112, 0.4);
   --links-border-color: #F1B2CE;
   --background-color: #000028;
