--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,7 +10,8 @@ body {
   min-inline-size: 375px;
   /* max-inline-size: 1440px; */
   max-inline-size: 1920px;
-  margin: 0;
+  margin: 0 auto;
+  padding: 0;
 }
 
 h1,
