--- a/styles/variables.css
+++ b/styles/variables.css
@@ -14,6 +14,6 @@
   --hover-border-color: rgba(255, 0, 112, 0.4);
   --links-border-color: #F1B2CE;
   --background-color: #000028;
-  --main-font: 'IBM Plex mono';
+  --main-font: 'IBM Plex mono', sans-serif;
   --main-font-size: 18px;
 }
