--- a/styles/light.css
+++ b/styles/light.css
@@ -8,7 +8,7 @@
   --accent-title-color: #FFC2E6;
   --accent-quetstion-title-color: #353430;
   --accent-color: #FF8DCB;
-  --accent-title-color: #353430;
+  --accent-title-color: #FFC2E6;
   --accent-description-color: #353430;
   --section-description-color: #353430;
   --border-color: #353430;
