--- a/styles/style.css
+++ b/styles/style.css
@@ -48,7 +48,7 @@
   border-right: 1px solid #ff007f;
 }
 
-.header::before {
+.decorated__corner::before {
   content: "";
   position: absolute;
   right: 0px;
@@ -58,6 +58,28 @@
   border-top: 1px solid var(--border-color);
   border-right: 1px solid var(--border-color);
 }
+
+.decorated__corner::after {
+  content: "";
+  position: absolute;
+  bottom: 10px;
+  left: 0;
+  width: 25px;
+  height: 25px;
+  border-left: 1px solid var(--border-color);
+  border-bottom: 1px solid var(--border-color);
+}
+
+/* .header::before {
+  content: "";
+  position: absolute;
+  right: 0px;
+  top: 10px;
+  width: 25px;
+  height: 25px;
+  border-top: 1px solid var(--border-color);
+  border-right: 1px solid var(--border-color);
+} */
 
 .header::after {
   content: "";
@@ -235,7 +257,7 @@ a:focus {
 
 /* уголок */
 
-.footer::before {
+/* .footer::before {
   content: "";
   position: absolute;
   right: 3px;
@@ -255,7 +277,7 @@ a:focus {
   height: 25px;
   border-left: 1px solid var(--border-color);
   border-bottom: 1px solid var(--border-color);
-}
+} */
 
 @media (width >= 768px) {
   .page {
@@ -285,15 +307,25 @@ a:focus {
     padding-inline-end: 10px;
   }
 
-  .header::before {
-    right: 20px;
-    top: 20px;
-  }
-
-  .header::after {
+  .decorated__corner::after {
     bottom: 10px;
     left: 10px;
   }
+
+  .decorated__corner::before {
+    right: 20px;
+    top: 20px;
+  }
+  
+  /* .header::before {
+    right: 20px;
+    top: 20px;
+  } */
+/* 
+  .header::after {
+    bottom: 10px;
+    left: 10px;
+  } */
 
   .main__title__section {
     grid-column: 1 / 3;
@@ -453,7 +485,7 @@ a:focus {
     margin-inline-start: 15px; */
   }
 
-  .footer::before {
+  /* .footer::before {
     right: 0px;
     top: 0px;
   }
@@ -461,7 +493,7 @@ a:focus {
   .footer::after {
     bottom: 35px;
     left: -15px;
-  }
+  } */
 }
 
 @media (width >= 1024px) {
@@ -482,17 +514,29 @@ a:focus {
     min-block-size: 768px;
   }
 
-  .header::before {
-    right: 0px;
-    top: 20px;
-  }
-
-  .header::after {
+  .decorated__corner::after {
     content: "";
     position: absolute;
     bottom: 20px;
     left: 0px;
   }
+
+  .decorated__corner::before {
+    right: 0px;
+    top: 20px;
+  } 
+
+  /* .header::before {
+    right: 0px;
+    top: 20px;
+  } */
+
+  /* .header::after {
+    content: "";
+    position: absolute;
+    bottom: 20px;
+    left: 0px;
+  } */
 
   .main__title {
     grid-column: 1 / 3;
@@ -602,7 +646,7 @@ a:focus {
     min-block-size: 768px; */
   }
 
-  .footer::before {
+  /* .footer::before {
     right: 0px;
     top: 0px;
   }
@@ -610,5 +654,5 @@ a:focus {
   .footer::after {
     bottom: 0px;
     left: 0px;
-  }
+  } */
 }
