--- a/styles/style.css
+++ b/styles/style.css
@@ -30,7 +30,7 @@
   font-size: var(--main-font-size);
   position: absolute;
   top: 12px;
-  right: -3px;
+  right: 5px;
   display: var(--display-content);
   align-items: center;
 }
@@ -93,11 +93,24 @@
 }
 
 .header__theme-menu-list {
-  margin-inline-end: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-inline-end: 0;
+  margin-block-start: 8px;
 }
 
 .accent__word {
   text-shadow: 2px 2px 0 var(--accent-color);
+}
+
+.header__theme-menu-button {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  line-height: 18px;
+  inline-size: 70px;
+  block-size: 26px;
 }
 
 .header__theme-menu-button:focus {
@@ -298,22 +311,22 @@ a:focus {
   }
 
   .header__theme-menu-list {
-    margin-inline-end: 3px;
+    margin-inline-end: -5px;
     margin-block-end: 5px;
   }
 
   .rec__element {
     padding-block-start: 10px;
-    padding-inline-end: 10px;
+    padding-inline-end: 0;
   }
 
   .decorated__corner::after {
-    bottom: 10px;
-    left: 10px;
+    bottom: 20px;
+    left: 0;
   }
 
   .decorated__corner::before {
-    right: 20px;
+    right: 0px;
     top: 20px;
   }
   
@@ -478,21 +491,21 @@ a:focus {
   }
 
   .footer {
-    /* max-block-size: 100vh;
+    /* max-block-size: 100vh; */
     min-block-size: 1024px;
     margin-block-start: -20px;
-    margin-inline-start: 15px; */
+    /* margin-inline-start: 15px;  */
   }
 
-  /* .footer::before {
+.footer::before {
     right: 0px;
     top: 0px;
-  }
+  } 
 
   .footer::after {
     bottom: 35px;
-    left: -15px;
-  } */
+    left: 0px;
+  } 
 }
 
 @media (width >= 1024px) {
@@ -560,9 +573,10 @@ a:focus {
   }
 
   .header__theme-menu-list {
-    display: flex;
-    gap: 25px;
-    margin-block-start: 10px;
+    flex-direction: row;
+    gap: 10px;
+    margin-block-start: 20px;
+    margin-inline-end: 1px;
   }
 
   .article__medium__card .article__question__title {
@@ -641,17 +655,17 @@ a:focus {
     justify-self: center; */
     /* align-self: flex-end; */
     /* margin-block-end: 170px;
-    block-size: 100vh;
-    min-block-size: 768px; */
+    block-size: 100vh; */
+    min-block-size: 768px;
   }
 
-  /* .footer::before {
+  .footer::before {
     right: 0px;
-    top: 0px;
+    top: 80px;
   }
 
   .footer::after {
-    bottom: 0px;
+    bottom: 73px;
     left: 0px;
-  } */
+  }
 }
