--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,6 +9,7 @@
   --accent-quetstion-title-color: #FF0070;
   --accent-color: #FF0070;
   --accent-description-color: #000028;
+  --button-color: #FF0070;
   --section-description-color: #F1B2CE;
   --border-color: #FF0070;
   --background-image: url("../images/cover-image-dark.png");
