--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,4 @@
-/* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
-
 .page {
-  /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
   width: 100%;
   background-image: var(--background-image);
   background-position: center;
@@ -9,7 +6,6 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-color: var(--background-color);
-  background-image: var(--background-image);
 }
 
 .page__content {
@@ -70,17 +66,6 @@
   border-bottom: 1px solid var(--border-color);
 }
 
-/* .header::before {
-  content: "";
-  position: absolute;
-  right: 0px;
-  top: 10px;
-  width: 25px;
-  height: 25px;
-  border-top: 1px solid var(--border-color);
-  border-right: 1px solid var(--border-color);
-} */
-
 .header::after {
   content: "";
   position: absolute;
@@ -130,19 +115,9 @@
   pointer-events: none;
 }
 
-/* .theme-input {
-  display: none;
-}
-
-.theme-input:checked + .header__theme-menu-button {
-  outline: 1px solid var(--border-color);
-  padding: 0 10px 4px;
-} */
-
 .header__theme-menu-button:hover {
   border: 1px solid var(--hover-border-color);
   outline: none;
-  /* padding: 0 5px 5px; */
 }
 
 a {
@@ -168,7 +143,6 @@ a:focus {
   display: flex;
   justify-content: end;
   margin-block-start: 70px;
-  /* margin-inline-end: 10px; */
   line-height: 33px;
 }
 
@@ -265,36 +239,7 @@ a:focus {
   margin-block-start: 37px;
 }
 
-/* уголок */
-
-/* .footer::before {
-  content: "";
-  position: absolute;
-  right: 3px;
-  top: 10px;
-  width: 25px;
-  height: 25px;
-  border-top: 1px solid var(--border-color);
-  border-right: 1px solid var(--border-color);
-}
-
-.footer::after {
-  content: "";
-  position: absolute;
-  bottom: 10px;
-  left: 3px;
-  width: 25px;
-  height: 25px;
-  border-left: 1px solid var(--border-color);
-  border-bottom: 1px solid var(--border-color);
-} */
-
 @media (width >= 768px) {
-  .page {
-    /* padding-inline-start: 20px;
-    padding-inline-end: 20px; */
-  }
-
   .page__content {
     padding-inline-start: 20px;
     padding-inline-end: 20px;
@@ -326,16 +271,6 @@ a:focus {
     right: 0px;
     top: 20px;
   }
-
-  /* .header::before {
-    right: 20px;
-    top: 20px;
-  } */
-  /* 
-  .header::after {
-    bottom: 10px;
-    left: 10px;
-  } */
 
   .main__title__section {
     grid-column: 1 / 3;
@@ -384,12 +319,6 @@ a:focus {
     margin-inline-start: 15px;
   }
 
-  /* .main__section
-    > .main__article__card:nth-of-type(1)
-    > .article__question__title {
-    max-inline-size: 235px;
-  } */
-
   .focus__question__title {
     max-inline-size: 235px;
   }
@@ -426,19 +355,6 @@ a:focus {
     max-inline-size: 470px;
   }
 
-  /* .main__section
-    > .main__article__card:nth-of-type(3)
-    > .article__question__title {
-    margin-block-start: 10px;
-    min-width: 236px;
-  }
-
-  .main__section > .main__article__card:nth-of-type(3) > .article__content {
-    margin-block-start: 10px;
-    margin-block-end: 10px;
-    max-width: 475px;
-  } */
-
   .main__card__title {
     margin-block-start: 90px;
     margin-block-end: 20px;
@@ -451,7 +367,6 @@ a:focus {
     gap: 20px;
     grid-auto-flow: dense;
     min-height: 100vh;
-    /* max-height: 825px; */
   }
 
   .main__picture {
@@ -488,29 +403,24 @@ a:focus {
   }
 
   .footer {
-    /* max-block-size: 100vh; */
     min-block-size: 1024px;
     margin-block-start: -20px;
-    /* margin-inline-start: 15px;  */
   }
 
-  /* .footer::before {
+  /* настройка позиции уголков у футера */
+
+  .footer::before {
     right: 0px;
     top: 0px;
   }
 
   .footer::after {
-    bottom: 35px;
-    left: 0px;
-  } */
+    bottom: 40px;
+    left: -15px;
+  }
 }
 
 @media (width >= 1024px) {
-  .page {
-    /* padding-inline-start: 20px;
-    padding-inline-end: 20px; */
-  }
-
   .page__content {
     padding-inline-start: 20px;
     padding-inline-end: 20px;
@@ -534,18 +444,6 @@ a:focus {
     right: 0px;
     top: 20px;
   }
-
-  /* .header::before {
-    right: 0px;
-    top: 20px;
-  } */
-
-  /* .header::after {
-    content: "";
-    position: absolute;
-    bottom: 20px;
-    left: 0px;
-  } */
 
   .main__title {
     grid-column: 1 / 3;
@@ -578,6 +476,8 @@ a:focus {
 
   .article__medium__card .article__question__title {
     max-width: 315px;
+    grid-row: 1 / -1;
+    grid-column: 1 / -1;
   }
 
   .article__description {
@@ -585,36 +485,21 @@ a:focus {
     max-inline-size: none;
   }
 
-  .article__title {
-    /* max-inline-size: 650px; */
-  }
-
   .article__medium__card {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: auto;
-    gap: 20px;
+    grid-row: 20px;
   }
-
-  .article__medium__card .article__question__title {
-    grid-row: 1 / -1;
-    grid-column: 1 / -1;
-  }
-
-  /* .main__section
-    > .main__article__card:nth-of-type(1)
-    > .article__question__title {
-      max-inline-size: inherit;
-    } */
 
   .focus__question__title {
     max-inline-size: inherit;
   }
 
   .article__medium__card .article__content {
-    /* max-width: 315px;
+    max-width: 315px;
     justify-self: center;
-    align-self: flex-start; */
+    align-self: flex-start;
     grid-column: auto;
   }
 
@@ -622,56 +507,25 @@ a:focus {
     min-inline-size: 315px;
     max-inline-size: none;
   }
-/* 
-  .article__medium__card .article__content {
-    grid-row: 2 / 3;
-    grid-column: 1 / 3;
-    grid-auto-flow: dense;
-  } */
-
-  /* .article__medium__card .multitasking__medium__card {
-    grid-row: 2 / 3;
-    grid-column: 1 / 2;
-    margin-inline-start: -7px;
-  }
-
-  .article__medium__card .food__medium__card {
-    grid-row: 2 / 3;
-    grid-column: 2 / 3;
-    margin-inline-end: -10px;
-  }
-
-  .article__medium__card .article__content:last-child {
-    grid-row: 2 / 3;
-    grid-column: 3 / 4;
-    margin-inline-start: 20px;
-  } */
-
-  /* .main__section > .main__article__card:nth-of-type(3) > .article__content {
-    max-width: 650px;
-  } */
 
   .main__pictures {
-    /* max-width: 985px; */
     justify-self: center;
   }
 
   .footer {
-    /* display: grid;
-    justify-self: center; */
-    /* align-self: flex-end; */
-    /* margin-block-end: 170px; */
-    block-size: 100vh; 
+    block-size: 100vh;
     min-block-size: 768px;
   }
 
-  /* .footer::before {
+  /* настройка уголков у футера */
+
+  .footer::before {
     right: 0px;
     top: 80px;
   }
 
   .footer::after {
-    bottom: 73px;
-    left: 0px;
-  } */
+    bottom: 70px;
+    left: -10px;
+  }
 }
