--- a/styles/variables.css
+++ b/styles/variables.css
@@ -8,6 +8,7 @@
   --accent-color: #FF0070;
   --accent-description-color: #000028;
   --section-description-color: #F1B2CE;
+  --button-color: #FF0070;
   --border-color: #FF0070;
   --background-image: url("../images/cover-image-dark.png");
   --display-content: flex;
