--- a/styles/style.css
+++ b/styles/style.css
@@ -34,11 +34,12 @@
 .rec__element::after {
   content: "";
   display: inline-block;
-  width: 12px;
-  height: 12px;
+  width: 10px;
+  height: 10px;
   background-color: var(--accent-color);
   border-radius: 50%;
-  margin-left: 10px;
+  margin-left: 8px;
+  margin-right: 6px;
   box-shadow: 0 0 4px 2px var(--accent-color);
   border-top: 1px solid #ff007f;
   border-right: 1px solid #ff007f;
@@ -56,17 +57,6 @@
 }
 
 .decorated__corner::after {
-  content: "";
-  position: absolute;
-  bottom: 10px;
-  left: 0;
-  width: 25px;
-  height: 25px;
-  border-left: 1px solid var(--border-color);
-  border-bottom: 1px solid var(--border-color);
-}
-
-.header::after {
   content: "";
   position: absolute;
   bottom: 10px;
@@ -227,16 +217,18 @@ a:focus {
   grid-column: 1;
 }
 
+.main__picture__section {
+  margin-block-end: 40px;
+}
+
 .footer {
   position: relative;
   display: grid;
-  /* margin-block-start: 40px; */
   block-size: 100vh;
   min-block-size: 668px;
   justify-content: center;
   align-content: center;
   text-align: center;
-  margin-block-start: 37px;
 }
 
 @media (width >= 768px) {
@@ -278,12 +270,15 @@ a:focus {
     display: grid;
   }
 
-  .main__title {
-    grid-column: 1 / 3;
-    align-self: center;
+  .header__title {
     margin-inline-start: -20px;
     margin-block-end: 160px;
     margin-block-start: 125px;
+    grid-column: 1 / 3;
+  }
+
+  .main__title {
+    align-self: center;
     font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   }
 
@@ -366,7 +361,6 @@ a:focus {
     grid-template-rows: min-content repeat(3, minmax(min-content, max-content));
     gap: 20px;
     grid-auto-flow: dense;
-    min-height: 100vh;
   }
 
   .main__picture {
@@ -404,19 +398,6 @@ a:focus {
 
   .footer {
     min-block-size: 1024px;
-    margin-block-start: -20px;
-  }
-
-  /* настройка позиции уголков у футера */
-
-  .footer::before {
-    right: 0px;
-    top: 0px;
-  }
-
-  .footer::after {
-    bottom: 40px;
-    left: -15px;
   }
 }
 
@@ -445,10 +426,13 @@ a:focus {
     top: 20px;
   }
 
-  .main__title {
+  .header__title {
     grid-column: 1 / 3;
     margin-block-start: 125px;
     margin-block-end: 115px;
+  }
+
+  .main__title {
     font-size: clamp(9.8125rem, 11.8125rem + -3.125vw, 10.3125rem);
   }
 
@@ -489,7 +473,7 @@ a:focus {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: auto;
-    grid-row: 20px;
+    column-gap: 20px;
   }
 
   .focus__question__title {
@@ -497,7 +481,6 @@ a:focus {
   }
 
   .article__medium__card .article__content {
-    max-width: 315px;
     justify-self: center;
     align-self: flex-start;
     grid-column: auto;
@@ -513,19 +496,7 @@ a:focus {
   }
 
   .footer {
-    block-size: 100vh;
     min-block-size: 768px;
-  }
 
-  /* настройка уголков у футера */
-
-  .footer::before {
-    right: 0px;
-    top: 80px;
-  }
-
-  .footer::after {
-    bottom: 70px;
-    left: -10px;
   }
 }
